--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/logo.png
+    - assets/img/google.png
+    - assets/img/apple.png
+    - assets/img/facebook.png
+    - assets/img/twitter.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
