--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   http: ^0.13.0
   shared_preferences: ^2.0.0
   firebase_core: ^1.7.0
-
+  firebase_auth: ^3.1.3 
 
 
 
@@ -28,7 +28,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:         
+    sdk: flutter
   mockito: ^5.0.0
+  test: ^1.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
