--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
   flutter_bloc: ^7.3.0
   equatable: ^2.0.3
   dartz: ^0.10.0
-  connectivity: ^3.0.6
   http: ^0.13.0
   shared_preferences: ^2.0.0
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3 
+  internet_connection_checker: ^0.0.1+3
 
 
 
