--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.3
   dartz: ^0.10.0
   http: ^0.13.0
+  get: ^4.5.1
   shared_preferences: ^2.0.0
   firebase_core: ^1.7.0
   firebase_auth: ^3.1.3 
